k8s/authentication.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
spec:
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
      - name: authentication-service
        image: celestialowl/authentication-service:1.0.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "450m"
        ports:
        - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication-service 
  ports:
  - port: 8081
    targetPort: 8081
    name: main-port
    protocol: TCP
