k8s/broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-service
spec:
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: broker-service
        image: "celestialowl/broker-service:1.0.3"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker-service
  ports:
  - port: 8080
    targetPort: 8080
    name: main-port
    protocol: TCP
