k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
spec:
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: front-end
        image: "celestialowl/front-end:1.0.10"
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  selector:
    app: front-end
  ports:
  - port: 8081
    targetPort: 8081
    name: main-port
    protocol: TCP
