k8s/listener.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener-service
spec:
  selector:
    matchLabels:
      app: listener-service
  template:
    metadata:
      labels:
        app: listener-service
    spec:
      containers:
      - name: listener-service
        image: celestialowl/listener-service:1.0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: listener-service
spec:
  selector:
    app: listener-service
  ports:
  - port: 80
    targetPort: 80
    name: web-port
    protocol: TCP
