k8s/logger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-service
spec:
  selector:
    matchLabels:
      app: logger-service
  template:
    metadata:
      labels:
        app: logger-service
    spec:
      containers:
      - name: logger-service
        image: celestialowl/logger-service:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        - containerPort: 5001
        - containerPort: 50001

---
apiVersion: v1
kind: Service
metadata:
  name: logger-service
spec:
  selector:
    app: logger-service
  ports:
  - port: 5001
    targetPort: 5001
    name: rpc-port
    protocol: TCP
  - port: 80
    targetPort: 80
    name: web-port
    protocol: TCP
  - port: 50001
    targetPort: 50001
    name: grpc-port
    protocol: TCP
