k8s/mail.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
spec:
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: mail-service
        image: celestialowl/mail-service:1.0.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service 
  ports:
  - port: 80
    targetPort: 80
    name: main-port
    protocol: TCP
